--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,19 +9,19 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">31,428</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">17,830</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">ParaBank.Tests.RecruitmentVacanciesTest</td><td><a href="#m0">vacanciesSearch</a></td><td rowspan="1">1706724033188</td><td rowspan="1">26278</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">ParaBank.Tests.RecruitmentVacanciesTest</td><td><a href="#m0">vacanciesSearch</a></td><td rowspan="1">1706787156611</td><td rowspan="1">11526</td></tr></tbody>
 </table>
 <h2>Default test</h2><h3 id="m0">ParaBank.Tests.RecruitmentVacanciesTest#vacanciesSearch</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.ElementNotInteractableException: element not interactable
-  (Session info: chrome=120.0.6099.225)
+  (Session info: chrome=121.0.6167.86)
 Build info: version: &apos;4.11.0&apos;, revision: &apos;040bc5406b&apos;
 System info: os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.7&apos;
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [7c2cfb27cb1dbfd336fbd239b923b82e, sendKeysToElement {id=F52FF7C4DC7FFA81A73E4F66E5A06CE7_element_86, value=[Ljava.lang.CharSequence;@3f92a84e}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 120.0.6099.225, chrome: {chromedriverVersion: 120.0.6099.109 (3419140ab66..., userDataDir: C:\Users\POTTI~1.MEG\AppDat...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:64475}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:64475/devtoo..., se:cdpVersion: 120.0.6099.225, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Element: [[ChromeDriver: chrome on windows (7c2cfb27cb1dbfd336fbd239b923b82e)] -&gt; xpath: //*[contains(text(),&apos;Job Title&apos;)]/parent::div/following-sibling::div//*[@class=&apos;oxd-select-text--after&apos;]]
-Session ID: 7c2cfb27cb1dbfd336fbd239b923b82e
+Command: [28fc9963d607cca4e930f1828ced8338, sendKeysToElement {id=0A7FF666DDF27B3E7C005FB830FAC0C4_element_96, value=[Ljava.lang.CharSequence;@288214b1}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 121.0.6167.86, chrome: {chromedriverVersion: 121.0.6167.85 (3f98d690ad7e..., userDataDir: C:\Users\POTTI~1.MEG\AppDat...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:52328}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:52328/devtoo..., se:cdpVersion: 121.0.6167.86, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Element: [[ChromeDriver: chrome on windows (28fc9963d607cca4e930f1828ced8338)] -&gt; xpath: //*[contains(text(),&apos;Job Title&apos;)]/ancestor::div[contains(@class,&apos;oxd-input-group oxd-input-field-bottom-space&apos;)]//*[@class=&apos;oxd-select-text--after&apos;]]
+Session ID: 28fc9963d607cca4e930f1828ced8338
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:77)
 	at java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
@@ -37,7 +37,7 @@ Session ID: 7c2cfb27cb1dbfd336fbd239b923b82e
 	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:224)
 	at org.openqa.selenium.remote.RemoteWebElement.sendKeys(RemoteWebElement.java:111)
 	at ParaBank.utils.WebActions.clickDownArrow(WebActions.java:55)
-	at ParaBank.PO.RecruitmentVacanciesPage.validateRecruitmentVacancies(RecruitmentVacanciesPage.java:69)
+	at ParaBank.PO.RecruitmentVacanciesPage.validateRecruitmentVacancies(RecruitmentVacanciesPage.java:92)
 	at ParaBank.Tests.RecruitmentVacanciesTest.vacanciesSearch(RecruitmentVacanciesTest.java:15)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
