--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Potti.Meghana\AppData\Local\Temp\testng-eclipse--1604615309\testng-customsuite.xml</span>
+                    <span>C:\Users\Potti.Meghana\AppData\Local\Temp\testng-eclipse-1288598428\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -130,14 +130,14 @@
                   </a> <!-- vacanciesSearch -->
                   <span class="method-name">vacanciesSearch</span>
                   <div class="stack-trace">org.openqa.selenium.ElementNotInteractableException: element not interactable
-  (Session info: chrome=120.0.6099.225)
+  (Session info: chrome=121.0.6167.86)
 Build info: version: &apos;4.11.0&apos;, revision: &apos;040bc5406b&apos;
 System info: os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.7&apos;
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [7c2cfb27cb1dbfd336fbd239b923b82e, sendKeysToElement {id=F52FF7C4DC7FFA81A73E4F66E5A06CE7_element_86, value=[Ljava.lang.CharSequence;@3f92a84e}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 120.0.6099.225, chrome: {chromedriverVersion: 120.0.6099.109 (3419140ab66..., userDataDir: C:\Users\POTTI~1.MEG\AppDat...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:64475}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:64475/devtoo..., se:cdpVersion: 120.0.6099.225, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Element: [[ChromeDriver: chrome on windows (7c2cfb27cb1dbfd336fbd239b923b82e)] -&gt; xpath: //*[contains(text(),&apos;Job Title&apos;)]/parent::div/following-sibling::div//*[@class=&apos;oxd-select-text--after&apos;]]
-Session ID: 7c2cfb27cb1dbfd336fbd239b923b82e
+Command: [28fc9963d607cca4e930f1828ced8338, sendKeysToElement {id=0A7FF666DDF27B3E7C005FB830FAC0C4_element_96, value=[Ljava.lang.CharSequence;@288214b1}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 121.0.6167.86, chrome: {chromedriverVersion: 121.0.6167.85 (3f98d690ad7e..., userDataDir: C:\Users\POTTI~1.MEG\AppDat...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:52328}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:52328/devtoo..., se:cdpVersion: 121.0.6167.86, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Element: [[ChromeDriver: chrome on windows (28fc9963d607cca4e930f1828ced8338)] -&gt; xpath: //*[contains(text(),&apos;Job Title&apos;)]/ancestor::div[contains(@class,&apos;oxd-input-group oxd-input-field-bottom-space&apos;)]//*[@class=&apos;oxd-select-text--after&apos;]]
+Session ID: 28fc9963d607cca4e930f1828ced8338
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:77)
 	at java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
@@ -153,7 +153,7 @@ Session ID: 7c2cfb27cb1dbfd336fbd239b923b82e
 	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:224)
 	at org.openqa.selenium.remote.RemoteWebElement.sendKeys(RemoteWebElement.java:111)
 	at ParaBank.utils.WebActions.clickDownArrow(WebActions.java:55)
-	at ParaBank.PO.RecruitmentVacanciesPage.validateRecruitmentVacancies(RecruitmentVacanciesPage.java:69)
+	at ParaBank.PO.RecruitmentVacanciesPage.validateRecruitmentVacancies(RecruitmentVacanciesPage.java:92)
 	at ParaBank.Tests.RecruitmentVacanciesTest.vacanciesSearch(RecruitmentVacanciesTest.java:15)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
@@ -192,7 +192,7 @@ Session ID: 7c2cfb27cb1dbfd336fbd239b923b82e
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Potti.Meghana\AppData\Local\Temp\testng-eclipse--1604615309\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Potti.Meghana\AppData\Local\Temp\testng-eclipse-1288598428\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -249,12 +249,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'vacanciesSearch')
 data.setCell(0, 2, 'ParaBank.Tests.RecruitmentVacanciesTest')
-data.setCell(0, 3, 26278);
+data.setCell(0, 3, 11526);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 26 seconds</span>
+              <span class="suite-total-time">Total running time: 11 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -296,11 +296,11 @@ return data;
                 <img src="failed.png">
                 </img>
                 <span class="method-name">vacanciesSearch</span>
-                <span class="method-start">4607 ms</span>
+                <span class="method-start">5839 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">30903 ms</span>
+                <span class="method-start">17376 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
