--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Potti.Meghana\AppData\Local\Temp\testng-eclipse--1082105330\testng-customsuite.xml</span>
+                    <span>C:\Users\Potti.Meghana\AppData\Local\Temp\testng-eclipse--1105495389\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Guru99.Tests.TelecomAddCustmerTest" class="method navigator-link" hash-for-method="addCustomer">addCustomer</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Guru99.Tests.NewToursTest" class="method navigator-link" hash-for-method="newTours">newTours</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Guru99.Tests.TelecomAddCustmerTest</span>
+              <span class="class-name">Guru99.Tests.NewToursTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="addCustomer">
-                  </a> <!-- addCustomer -->
-                  <span class="method-name">addCustomer</span>
+                  <a name="newTours">
+                  </a> <!-- newTours -->
+                  <span class="method-name">newTours</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Potti.Meghana\AppData\Local\Temp\testng-eclipse--1082105330\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Potti.Meghana\AppData\Local\Temp\testng-eclipse--1105495389\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Guru99.Tests.TelecomAddCustmerTest&quot;&gt;
+      &lt;class name=&quot;Guru99.Tests.NewToursTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;addCustomer&quot;/&gt;
+          &lt;include name=&quot;newTours&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- Guru99.Tests.TelecomAddCustmerTest --&gt;
+      &lt;/class&gt; &lt;!-- Guru99.Tests.NewToursTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -191,9 +191,9 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'addCustomer')
-data.setCell(0, 2, 'Guru99.Tests.TelecomAddCustmerTest')
-data.setCell(0, 3, 23120);
+data.setCell(0, 1, 'newTours')
+data.setCell(0, 2, 'Guru99.Tests.NewToursTest')
+data.setCell(0, 3, 23824);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -224,18 +224,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Guru99.Tests.TelecomAddCustmerTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">Guru99.Tests.NewToursTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">addCustomer</span>
-                <span class="method-start">7319 ms</span>
+                <span class="method-name">newTours</span>
+                <span class="method-start">8825 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">30451 ms</span>
+                <span class="method-start">32676 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
